    - Added "stat -tech cmos"
    - Added "opt_share" pass, run as part of "opt -full"
    - Added "-match-init" option to "dff2dffs" pass
    - Added "equiv_opt -multiclock"
    - Added "techmap_autopurge" support to techmap
    - Added "add -mod <modname[s]>"
    - Added "paramap" pass
    - Added "portlist" command
    - Added "check -mapped"
    - Added "check -allow-tbuf"
    - Added "autoname" pass 
    - Added "write_verilog -extmem"
    - Added "opt_mem" pass
    - Added "scratchpad" pass
    - Added "fminit" pass
    - Added "opt_lut_ins" pass
    - Added "logger" pass
    - Added "show -nobg"
    - Added "exec" command
    - Added "design -delete"
    - Added "design -push-copy"
    - Added "qbfsat" command
    - Added "select -unset"
    - Added "dfflegalize" pass
    - Removed "opt_expr -clkinv" option, made it the default
    - Added "proc -nomux
    - Merged "dffsr2dff", "opt_rmdff", "dff2dffe", "dff2dffs", "peepopt.dffmux" passes into a new "opt_dff" pass

 * SystemVerilog
    - Added checking of always block types (always_comb, always_latch and always_ff)
    - Added support for wildcard port connections (.*)
    - Added support for enum typedefs
    - Added support for structs and packed unions.
    - Allow constant function calls in for loops and generate if and case
    - Added support for static cast
    - Added support for logic typed parameters
    - Fixed generate scoping issues
    - Added support for real-valued parameters
    - Allow localparams in constant functions
    - Module name scope support
    - Support recursive functions using ternary expressions
    - Extended support for integer types
    - Support for parameters without default values
    - Allow globals in one file to depend on globals in another
    - Added support for: *=, /=, %=, <<=, >>=, <<<=, >>>=
    - Added support for parsing the 'bind' construct
    - support declaration in procedural for initialization
    - support declaration in generate for initialization
